# findconf

./: .coveragerc  .gitignore  Dockerfile  README.md  bun.lockb  celerybeat-schedule  docker-compose.yml  manage.py  mydatabase_backup.sql  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  scrapy.cfg  settings_dev.py  setupProxy.js
.github/ISSUE_TEMPLATE/: bug-report.md
.github/workflows/: init-prod-all.yml  init-prod-release.yml  init-test-back.yml  init-test-front.yml  init-test-parser.yml  itin-test-front.yml  prod-github-actions-all.yml  test-github-actions-back.yml  test-github-actions-front.yml  test-github-actions-parser.yml
Conference_crm/: admin.py  apps.py  managers.py  models.py  urls.py  views.py
Conference_crm/migrations/: 0001_initial.py  0002_remove_user_group_alter_user_groups.py  0003_alter_user_groups.py
Conference_crm/permissions/: permissions.py
Conference_data/: admin.py  apps.py  filters.py  managers.py  models.py  serializers.py  tasks.py  urls.py  views.py
Conference_data/Parsers/: find_dates_in_string.py  parser_1spbgmu.py  parser_almazovcentre.py  parser_asou_mo.py  parser_bashgmu.py  parser_bstu.py  parser_bsuedu.py  parser_cchgeu.py  parser_donstu.py  parser_ggtu.py  (+37 more)
Conferences/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
Templates/: documentation.html
ansible/: 2disk_config.yml  add_users.yml  dis_serverconf.yml  docker.yml  fetch.yml  inventory  new_back_settings.yml  new_django_settings.yml  post_new_env.yml  preconfig.yml  predeploy.yml  serverconf.yml  soft_inst.yml  webconf.yml
conf/: default.conf  my.cnf  nginx.conf
conf_parsers/: items.py  middlewares.py  models.py  parsing.py  pipelines.py  settings.py  utils.py
docker_config/: docker-compose.yml
docs/: conf_parsers.html  index.html  search.js
public/: index.html  manifest.json
scripts-prod/: back_update.sh  certbot.sh  front_update.sh  parsers_update.sh
scripts-test/: back_update.sh  certbot.sh  front_update.sh  parsers_update.sh  test.txt
src/: App.js  Counter.jsx  GAListener.jsx  index.css  index.js  setupProxy.js
terraform/: main.tf  outputs.tf  providers.tf  variables.tf
(+449 files in other folders)
