[project]
name = "conf-parsers"
version = "1"
requires-python = ">=3.11"
dependencies = [
    "scrapy",
    "sqlalchemy",
    "dateparser",
    "psycopg[binary]",
    "scrapy-playwright",
    "pdfplumber",
    "django-environ",
]

[project.optional-dependencies]
dev = [
    "coverage",
    "ipython",
    "pdoc",
]

[build-system]
requires = ["setuptools", "wheel"]

[tool.setuptools]
py-modules = []

[tool.coverage.run]
branch = true
#source = ['conf_parsers']
include = ['conf_parsers/*']
omit = ['settings.py']

[tool.coverage.report]
skip_covered = true
